AllOverIt
  * Added interceptor support to cater for Aspected Oriented Programming (AOP)
  * Added string extension IsEmpty()
  * IAsyncEnumerable extension updates
  * Added async version of ChainOfResponsibility handler / composer
  * Added a pipeline pattern implementation
  * Added AllOverIt.Plugin.PluginLoadContext to dynamically load assemblies (for .NET Core 3.1 and above)

AllOverIt.DependencyInjection
  * Added an extension method to validate registered services. To be used during development only.

AllOverIt.ReactiveUI
  * Added support for a ReactiveCommand based pipeline (with support for chaining other sync / async pipeline steps)


02 Feb 2023
Version 6.3.0
======================================================================================================================
AllOverIt.Csv
  * Updated SerializeAsync() to allow the text writer to remain open so multiple, appending, calls can be made
  * Added an overload accepting IAsyncEnumerable data


07 Dec 2022
Version 6.2.1
======================================================================================================================
AllOverIt
  * Updated ObjectMapper so the dynamic configuration is thread safe. The convenience of "configuration free" is the
    priority of this mapper.


07 Dec 2022
Version 6.2.0
======================================================================================================================
AllOverIt
  * Re-worked the ObjectPropertySerializer so it contains the optional filter instead of being a property on the Options.
    This now means multiple serializers can be requested from the registry such that they all use their own filter instance
    while sharing a Singleton options.


06 Dec 2022
Version 6.1.0
======================================================================================================================
AllOverIt
  * Re-worked the registration of the ObjectPropertySerializer filters as the process was not thread-saafe.