@@ -10,6 +10,7 @@ AllOverIt
   * Added async version of ChainOfResponsibility handler / composer
   * Added a pipeline pattern implementation
   * Added AllOverIt.Plugin.PluginLoadContext to dynamically load assemblies (for .NET Core 3.1 and above)
+  * Fixed some Breadcrumbs overloads that were not recording the caller details
 
 AllOverIt.DependencyInjection
   * Added an extension method to validate registered services. To be used during development only.
